--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'com.android.support:multidex:1.0.3'
+    //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:22.2.0'
+    //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:22.2.0'
     implementation 'com.daimajia.androidanimations:library:2.4@aar'
 
